<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.vinkrish.classification.ClassificationThemeActivity">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="6dp"
        card_view:cardUseCompatPadding="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_theme"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/green_button_selector"
            android:paddingBottom="5dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="5dp"
            android:text="@string/save"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/card_view"
        android:layout_margin="10dp">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_theme_from"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text_black_light" />

                <com.vinkrish.Utils.GridViewInScroll
                    android:id="@+id/themeGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:numColumns="3"
                    android:verticalSpacing="0dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/custom_theme"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text_green_dark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/background"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text_black_light" />

                <com.vinkrish.Utils.GridViewInScroll
                    android:id="@+id/backgroundGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:numColumns="3"
                    android:verticalSpacing="0dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/movement"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text_black_light" />

                <com.vinkrish.Utils.GridViewInScroll
                    android:id="@+id/movementGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:numColumns="3"
                    android:verticalSpacing="0dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/frame"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text_black_light" />

                <com.vinkrish.Utils.GridViewInScroll
                    android:id="@+id/frameGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:numColumns="3"
                    android:verticalSpacing="0dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/container"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/text_black_light" />

                <com.vinkrish.Utils.GridViewInScroll
                    android:id="@+id/categoryGrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:numColumns="3"
                    android:verticalSpacing="0dp"/>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:text="@string/theme_preview"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_black_light" />

            <include
                layout="@layout/theme_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
