<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/violet_theme"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/violet_theme"
            android:textColor="#fff"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/blue_theme"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/themeBlue">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue_theme"
            android:textColor="#fff"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/yellow_theme"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/themeYellow">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yellow_theme"
            android:textColor="#fff"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>